[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemies/slimeBlue_up.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/slimeBlue_down.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 4.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squash",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.5, 14.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 1.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.5, 7 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.75 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 66

[node name="top_checker" type="Area2D" parent="."]
position = Vector2( -40, -16 )
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 40, 1.5 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 0.5, 7 )
shape = SubResource( 4 )

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
